// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CLI output snapshots template content generated template matches snapshot 1`] = `
"# ===========================================================================
#  .env.tpl — 1Password Secret References
#
#  This template contains references to secrets stored in 1Password.
#  The actual values are not stored here — only secret references.
#
#  To generate .env with real values:
#    op2env .env.tpl
#
#  To run a command with secrets injected:
#    op run --env-file .env.tpl -- npm start
#
#  Pushed: 2025-01-01 00:00:00 UTC
#  Generated by env2op v0.1.4
#  https://github.com/tolgamorf/env2op-cli
# ===========================================================================

# Database config
DATABASE_URL=op://vault-abc123/item-def456/field-111

# API
API_KEY=op://vault-abc123/item-def456/field-222
"
`;

exports[`CLI output snapshots template content template with no comments matches snapshot 1`] = `
"# ===========================================================================
#  secrets.tpl — 1Password Secret References
#
#  This template contains references to secrets stored in 1Password.
#  The actual values are not stored here — only secret references.
#
#  To generate secrets with real values:
#    op2env secrets.tpl
#
#  To run a command with secrets injected:
#    op run --env-file secrets.tpl -- npm start
#
#  Pushed: 2025-01-01 00:00:00 UTC
#  Generated by env2op v0.1.4
#  https://github.com/tolgamorf/env2op-cli
# ===========================================================================

KEY=op://v1/i1/f1
"
`;

exports[`CLI output snapshots usage instructions usage instructions match snapshot 1`] = `
"
Usage:
  op2env .env.tpl
  op run --env-file .env.tpl -- npm start"
`;

exports[`CLI output snapshots usage instructions usage instructions with path match snapshot 1`] = `
"
Usage:
  op2env /path/to/config.tpl
  op run --env-file /path/to/config.tpl -- npm start"
`;
